# ds-teomewhy-loyalty-system

./: .gitignore  LICENSE  main.py  pyproject.toml
data/: database_analytical.db
src/analytics/: data_view.py  dau.sql  exec_frequency_value_clusters_history.py  exec_lifecycle_history.py  feature_store.sql  frequency_value.py  frequency_value_cluster.py  frequency_value_clusters.sql  frequency_value_clusters_parameterized.sql  fs_education_platform.sql  fs_loyalty_system.sql  life_cycle.sql  life_cycle_parameterized.sql  mau.sql  mau_28days.sql  query.sql  recency_frequency_value.sql  reference_dates.sql  rfv_analysis.sql
