[project]
name = "teomewhy-loyalty-system"
version = "0.1.0"
description = "Customer Loyalty Prediction based on Teomewhy's Customer Relationship Management platform."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.44",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=7.0.1",
]
